// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-field spec: Render logic -> renders a label and description, if they are provided, and no id 1`] = `
<amplify-form-field description="description" label="label">
  <!---->
  <div class="amplify-ui--form-field css-9s9ecg">
    <div class="amplify-ui--form-field-label css-1h8rqh2">
      <amplify-label>
        label
      </amplify-label>
    </div>
    <div class="amplify-ui--form-field-description css-10lf99y" data-test="form-field-description" id="undefined-description">
      description
    </div>
    <div>
      <slot-fb name="input">
        <amplify-input description="description" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field spec: Render logic -> renders no label or description if none are provided 1`] = `
<amplify-form-field>
  <!---->
  <div class="amplify-ui--form-field css-9s9ecg">
    <div>
      <slot-fb name="input">
        <amplify-input placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field spec: Render logic -> renders with an id, if it is provided 1`] = `
<amplify-form-field description="description" field-id="id" label="label">
  <!---->
  <div class="amplify-ui--form-field css-9s9ecg">
    <div class="amplify-ui--form-field-label css-1h8rqh2">
      <amplify-label htmlfor="id">
        label
      </amplify-label>
    </div>
    <div class="amplify-ui--form-field-description css-10lf99y" data-test="form-field-description" id="id-description">
      description
    </div>
    <div>
      <slot-fb name="input">
        <amplify-input description="description" fieldid="id" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field spec: Render logic -> replaces the input component, if a new one is provided 1`] = `
<amplify-form-field description="description" field-id="id" label="label">
  <!---->
  <div class="amplify-ui--form-field css-9s9ecg">
    <div class="amplify-ui--form-field-label css-1h8rqh2">
      <amplify-label htmlfor="id">
        label
      </amplify-label>
    </div>
    <div class="amplify-ui--form-field-description css-10lf99y" data-test="form-field-description" id="id-description">
      description
    </div>
    <div>
      <input slot="input">
      <slot-fb hidden="" name="input">
        <amplify-input description="description" fieldid="id" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;
